Red pen edits to end.

--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -9,7 +9,7 @@
 
 \label{chapter-mirrorshades}
 
-This chapter discusses the design and development of a parallel reality platform called Mirrorshades that combined a wide field of view (FOV), stereoscopic 3D, VR HMD modified with cameras for video see-through, with an indoor positioning system (IPS), using the Unity game engine. This platform allows its user to observe and move around their real environment while imbued with the ability to alternatively view a complete immersive VR environment from the equivalent vantage point. Development of this platform enabled investigation of parallel reality in a manner that fully realised the envisaged experiential aspect of wholly switching between immersive real and virtual environments. The use of higher performance position and orientation tracking promised to allow for the freeform exploration scenario from section \ref{parallel-reality-in-virtual-heritage} to take place at closer ranges in smaller, indoor spaces and with sufficient accuracy to even experience aspects of the third detailed comparison scenario.
+This chapter discusses the design and development of a parallel reality platform called Mirrorshades that combined a wide field of view (FOV), stereoscopic 3D, VR HMD modified with cameras for video see-through, with an indoor positioning system (IPS), using the Unity game engine. This platform allows its user to observe and move around their real environment while imbued with the ability to alternatively view a complete immersive VR environment from the equivalent vantage point. Development of this platform enabled investigation of parallel reality in a manner that fully realised the envisioned experiential aspect of wholly switching between immersive real and virtual environments. The use of higher performance position and orientation tracking promised to allow for the freeform exploration scenario from section \ref{parallel-reality-in-virtual-heritage} to take place at closer ranges in smaller, indoor spaces and with sufficient accuracy to even experience aspects of the third detailed comparison scenario.
 
 %Previous XR research approached the vacancy problem by integrating sensor/actuator networks into the environments, such that actions in one could manifest in the other, however direct visual engagement with the virtual environment was only possible from static interfaces at pre-determined locations within the real environment~\cite{Lifton2007a, Dublon2011}. The platform discussed in this document addresses this shortcoming by providing a mobile interface for visual engagement with both environments of a XR system, allowing the user to transition between viewing their real environment and a virtual environment at any time while maintaining the freedom to move around them, multiplexing visual stimuli from their real surroundings and from a parallel, virtual `mirror world'~\cite{Gelernter1993}.
 
@@ -118,7 +118,7 @@ The March 2014 acquisition of Oculus by Facebook\footnote{\url{https://www.faceb
 
 \subsection{The Oculus Rift DK1 and Unity Game Engine}
 
-The OVW group took delivery of an Oculus Rift DK1 from the first batch of units shipped to the EU in August 2013. The immersive experience of using the DK1, thanks to its wide FOV, fast and accurate head tracking, stereoscopic 3D and novelty compared to traditional 2D displays, presented a markedly different modality of interaction with virtual content than the 10'' display of the tablet used by VTW. By filling the user's entire field of view with whatever visuals are displayed upon its screen, the Rift allowed for investigation of the true essence of the experiential aspect of wholly switching between real and virtual environments that the parallel reality concept envisaged.
+The OVW group took delivery of an Oculus Rift DK1 from the first batch of units shipped to the EU in August 2013. The immersive experience of using the DK1, thanks to its wide FOV, fast and accurate head tracking, stereoscopic 3D and novelty compared to traditional 2D displays, presented a markedly different modality of interaction with virtual content than the 10'' display of the tablet used by VTW. By filling the user's entire field of view with whatever visuals are displayed upon its screen, the Rift allowed for investigation of the true essence of the experiential aspect of wholly switching between real and virtual environments that the parallel reality concept envisioned.
 
 At this early stage after the DK1's release, the best supported software platform in terms of API provision and integration was the Unity game engine. After experience with modifying the Second Life client as part of the VTW project, it was decided best to convert the OVW group's OpenSim model of St Salvator's chapel into a Unity compatible format rather than embarking upon further modification to the Second Life client to support the DK1. Since the development of VTW the OVW group successfully engineered an automated process for converting OpenSim content into Unity compatible content, allowing the group's existing content, such as the chapel model, to be deployed within Unity executables.
 
@@ -384,7 +384,7 @@ A further consideration is the discrepancy between the lateral position of the c
 \label{registration-of-camera-and-unity-visuals}
 As mentioned in section \ref{caseforpr} the registration between real and virtual objects in the Mirrorshades system is less critical than that of an augmented reality system, as virtual objects in parallel reality are seen as part of a complete VR environment rather than gaining context from their accurate superposition upon a background of the RW environment. Whilst accurate registration will intuitively have a positive effect upon user experience of the Mirrorshades platform, especially when interaction with a reduced maximum opacity of the RW visuals (see section \ref{subsub-baseopacity}) is considered, the context provided to virtual objects by their wider virtual background and an emphasis on an interaction style that switches between environments rather than permanently overlaying one upon the other means that highly accurate registration is less of a concern than for many applications of augmented reality. Registration accuracies insufficient for augmented reality experiences may well be sufficient for successful parallel reality experiences.
 
-This lessened requirement for accurate registration allows the Mirrorshades platform to operate using just the DK1's head tracker without what Azuma refers to as \textit{``additional registration strategies''}~\cite{Azuma1997}. This tracker provides 1Khz sampling with roughly 2ms delay (from head movement to Unity receiving the data) and thanks to sensor fusion performed over data from the accelerometer, gyroscope and magnetometer, drift is reduced to negligible levels. Mitigating drift in the head tracking solution was important for Oculus as it is a requirement for any VR experience that has a fixed reference point such as \textit{``a game with a cockpit, where your head's orientation does not affect the position of whatever car/plane/mech you're piloting''}\footnote{\url{https://www.kickstarter.com/projects/1523379957/oculus-rift-step-into-the-game/posts/380099}}\saveFN\rifttrackerfn. It would result in a poor VR experience if drift was allowed to mount between a user's head orientation and this fixed reference point: \textit{``imagine re-orienting your head back to perfect center but in-game you're now looking slightly left or right''}\footnote{Ibid.}.
+This lessened requirement for accurate registration allows the Mirrorshades platform to operate using just the DK1's head tracker without what Azuma refers to as \textit{``additional registration strategies''}~\cite{Azuma1997}. This tracker provides 1Khz sampling with roughly 2ms delay (from head movement to Unity receiving the data) and thanks to sensor fusion performed over data from the accelerometer, gyroscope and magnetometer, drift is reduced to negligible levels. Mitigating drift in the head tracking solution was important for Oculus as it is a requirement for any VR experience that has a fixed reference point such as \textit{``a game with a cockpit, where your head's orientation does not affect the position of whatever car/plane/mech you're piloting''}\footnote{\url{https://www.kickstarter.com/projects/1523379957/oculus-rift-step-into-the-game/posts/380099}}\saveFN\rifttrackerfn. It would result in a poor VR experience if drift was allowed to mount between a user's head orientation and this fixed reference point: \textit{``imagine re-orienting your head back to perfect center but in-game you're now looking slightly left or right''}\useFN\rifttrackerfn .
 
 In the case of Mirrorshades the fixed reference point is the chapel - both the RW and the VR chapel, as they occupy the same `place'. By making sure that the two chapels are aligned at the beginning of each session, the negligible drift in the head tracker means that sufficient registration between the two environments is maintained throughout the experience without the need to introduce any additional registration strategies. This alignment is achieved by knowing the starting orientation of the virtual cameras in the VR chapel and then physically placing the DK1 in the corresponding orientation in the RW chapel. This starting orientation in the VR chapel is shown in figure \ref{sallies-rift-frame-of-reference.png} and producing the same orientation with the DK1 is trivial as it was chosen to be parallel with the architecture of the building (including the floor tiles, which proved to be a useful grid to accurately align the DK1 against).
 
@@ -797,8 +797,8 @@ Testing then took place with members of the Open Virtual Worlds research group (
 %=========================================================================================================
 
 \section{Summary}
-This chapter has recounted the development of the Mirrorshades parallel reality platform, which combines the Oculus Rift DK1 VR HMD with the IndoorAtlas IPS. The greater positional accuracy of the IPS compared to the GPS solution used within the VTW project allows investigation into the freeform exploration scenario and into aspects of the detailed comparison scenario. The immersive nature of the DK1, completely filling the user's FOV with mediated stereoscopic visuals, allows for investigation of the experiential aspect of switching wholly between complete and discrete real and virtual environments that was originally envisaged of the parallel reality concept but not realised by the VTW platform's modality of interaction. Four different styles of transition between real and virtual stimuli were implemented and their expected user experience illustrated using the combined Milgram/Waterworth model.
+This chapter has recounted the development of the Mirrorshades parallel reality platform, which combines the Oculus Rift DK1 VR HMD with the IndoorAtlas IPS. The greater positional accuracy of the IPS compared to the GPS solution used within the VTW project allows investigation into the freeform exploration scenario and into aspects of the detailed comparison scenario. The immersive nature of the DK1, completely filling the user's FOV with mediated stereoscopic visuals, allows for investigation of the experiential aspect of switching wholly between complete and discrete real and virtual environments that was originally envisioned of the parallel reality concept but not realised by the VTW platform's modality of interaction. Four different styles of transition between real and virtual stimuli were implemented and their expected user experience illustrated using the combined Milgram/Waterworth model.
 
-Latency measurements of the video see-through solution were performed and while higher than published best practices for VR experiences they were not expected to be as detrimental to user experience in the style of interaction envisaged of the platform as they would be in more traditional VR gaming scenarios. Initial testing of the platform was conducted, first within a department building and then within St Salvator's chapel, which was introduced as an ideal real world location at which to perform a user study of the Mirrorshades platform within the field of virtual heritage.
+Latency measurements of the video see-through solution were performed and while higher than published best practices for VR experiences they were not expected to be as detrimental to user experience in the style of interaction envisioned of the platform as they would be in more traditional VR gaming scenarios. Initial testing of the platform was conducted, first within a department building and then within St Salvator's chapel, which was introduced as an ideal real world location at which to perform a user study of the Mirrorshades platform within the field of virtual heritage.
 
 %=========================================================================================================
