--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -1551,7 +1551,7 @@ Performance of IndoorAtlas was similarly high throughout both the 75/25 scenario
 
 \subsection{Stage 2.2 Summary}
 
-This stage of the evaluation investigated the effect of changing the default view of a parallel reality experience to one that always includes some aspect of the VR environment, such that the user is at all times perceiving some degree of VR stimuli even when they do not consciously trigger a transition into a non-default view. This addressed the second fundamental aspect of transitions between the constituent environments of a parallel reality platform that were expected to have an effect upon the severity of breaks in presence (see section associated with them \ref{design-considerations-for-rw-vr-transitions}). Changing the default view in this manner was shown to be less disruptive, and to have a less negative affect upon the break in presence experienced when performing a transition, than the automated transition (transition 4) employed in the second of the stage 2.1 parallel reality scenarios.
+This stage of the evaluation investigated the effect of changing the default view of a parallel reality experience to one that always includes some aspect of the VR environment, such that the user is at all times perceiving some degree of VR stimuli even when they do not consciously trigger a transition into a non-default view. This addressed the second fundamental aspect of transitions between the constituent environments of a parallel reality platform that were expected to have an effect upon the severity of breaks in presence (see section \ref{design-considerations-for-rw-vr-transitions}). Changing the default view in this manner was shown to be less disruptive, and to have a less negative affect upon the break in presence experienced when performing a transition, than the automated transition (transition 4) employed in the second of the stage 2.1 parallel reality scenarios.
 
 Comparing the parallel reality scenarios from this stage of the evaluation to the second parallel reality scenario from the stage 2.1 evaluation in which transition 4 was used, the IPQ results indicate that the 75/25 scenario reduced SP and REAL to similar levels however the 50/50 scenario resulted in an almost imperceptible decrease in REAL and a noticeable \textit{increase} in SP. However despite the constant presence of VR visuals throughout both 75/25 and 50/50 scenarios, INV was not reduced as much as in the parallel reality scenarios from stage 2.1.
 
@@ -1559,7 +1559,7 @@ Despite these results and the fact that the 50/50 scenario was reported as allow
 
 Fewer transitions overall during the 50/50 scenario, with participants spending more time in total and per transition viewing the VR environment in the 75/25 scenario, support the notion that with an increased amount of VR visible in the default view participants did not feel the need to perform as frequent transitions to see the VR content. Considering the relationship observed in the stage 2.1 parallel reality scenarios of maximum variance of head movement restricted to periods in which the participants were viewing 100\% VR, reducing the participants' reliance upon performing these transitions stands to benefit participants' observation of RW components that they may otherwise have missed by perceiving only VR stimuli when looking in certain directions.
 
-However it is worth considering that while a default view that presents \textless 100\% RW does seem to increase participant exposure to angles of the RW environment other than those required to walk, that for a participant who feels less comfortable walking with the apparatus that not having a 100\% RW view available will likely have a detrimental effect to their experience as a whole. Furthermore if a user wishes to inspect an object in the RW environment in particular detail, not being able to activate a 100\% RW view may well reduce their ability to discern detail in this object, again hampering the overall parallel reality experience.
+However it is worth considering that while a default view that presents \textless 100\% RW does seem to increase participant exposure to angles of the RW environment other than those required to walk, that, for a participant who feels less comfortable walking with the apparatus, not having a 100\% RW view available will likely have a detrimental effect to their experience as a whole. Furthermore if a user wishes to inspect an object in the RW environment in particular detail, not being able to activate a 100\% RW view may well reduce their ability to discern detail in this object, again hampering the overall parallel reality experience.
 
 %=========================================================================================================
 
@@ -1569,9 +1569,9 @@ The evaluations described in this and the preceding chapters have experimentally
 
 Stage 2.1 assessed participant responses to several different styles of performing transitions between the constituent RW and VR environments, with a transition which furnished participants with complete control over the percentage of the visual stimuli of each environment that were presented to them emerging the clear favourite. The introduction of brief automatic transitions from RW to VR was met negatively when assessed in terms of enjoyment and preference, but positively when assessed in terms of awareness and understanding of the relationship between the two environments.
 
-Stage 2.2 further investigated the concept of presenting VR visual stimuli to the user without their conscious invocation of a transition, with the intention of raising awareness and understanding between the environments, and to cause the user to see aspects of the RW environment that they might otherwise have missed, but without introducing such the negative response as the automatic transition from stage 2.1 did. This was performed by replacing the 100\% RW default view with a default view that instead presented a percentage of each environment at all times. The more extreme case of a 50/50 split led to the greater increase in spatial presence within the VR environment and a barely perceptible decrease in experienced realism of the VR environment, however the 75/25 split that led to less remarkable changes in IPQ results was preferred by the participants in interview responses.
+Stage 2.2 further investigated the concept of presenting VR visual stimuli to the user without their conscious invocation of a transition, with the intention of raising awareness and understanding between the environments, and to cause the user to see aspects of the RW environment that they might otherwise have missed, but without introducing such the negative response as the automatic transition from stage 2.1 did. This was performed by replacing the 100\% RW default view with a view that instead presented a percentage of each environment at all times. The more extreme case of a 50/50 split led to the greater increase in spatial presence within the VR environment and a barely perceptible decrease in experienced realism of the VR environment, however the 75/25 split that led to less remarkable changes in IPQ results was preferred by the participants in interview responses.
 
-Together, these evaluations explored the two fundamental aspects of transitions between the constituent RW and VR environments of a parallel reality system that were identified in section \ref{design-considerations-for-rw-vr-transitions} as likely to have a direct bearing on the severity of the breaks in presence associated with them. Considering the findings of these evaluations, several best practices for future parallel reality implementations are proposed:
+Together, these evaluations explored the two fundamental aspects of transitions between the constituent RW and VR environments of a parallel reality system that were identified in section \ref{design-considerations-for-rw-vr-transitions} as likely to have a direct bearing on the severity of the breaks in presence associated with these transitions. Considering the findings of these evaluations, several best practices for future parallel reality implementations are proposed:
 
 \begin{enumerate}
 	\item Both a 100\% RW and a 100\% VR view should be provided, though these do not have to be the default RW and VR positions. A 100\% VR view is diagnostic for situations in which the user wishes to perform deliberate in depth observations of a VR object, while a 100\% RW view is important both for performing similar observations of RW objects but also such that movement in the RW environment can be made as comfortable as possible for the user. Whilst improvements to HMDs and associated video see-through technologies, along with improvements to the accuracy of indoor positioning systems, will undoubtedly mitigate the detrimental effects of walking while using a video see-through HMD based parallel reality system such as Mirrorshades, the ability to revert to a 100\% RW view will ensure that the experience of walking in such a situation is presented at its most comfortable.
